Bug 64238 - FILEOPEN: Writer shows footer elements that are hidden in Word
Summary: FILEOPEN: Writer shows footer elements that are hidden in Word
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.2.2 release
Hardware: Other Windows (All)
: medium normal
Assignee: Adam CloudOn
URL:
Whiteboard: BSA target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-05 15:11 UTC by Adam CloudOn
Modified: 2021-08-05 10:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
File containing 'hidden' footer (25.70 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-05-05 15:11 UTC, Adam CloudOn
Details
DOCX containing blank odd footer and non-blank even footer - marked as 'show only odd footers' (16.02 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-06-11 14:31 UTC, Adam CloudOn
Details
DOCX containing non-blank odd footer and non-blank even footer - marked as 'show only odd footers' (14.02 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-06-11 14:33 UTC, Adam CloudOn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam CloudOn 2013-05-05 15:11:53 UTC
Created attachment 78880 [details]
File containing 'hidden' footer

Problem description: 
A file with header and footer was created in Word.
After that - the header and footer were removed in Word (using the Ribbon - Header -> Remove Header, Footer -> Remove Footer).
When opening the DOCX in Writer - the footer is shown.
Also - when saving the file to a new DOCX and opening in Word - the footer appears (instead of being hidden).

Steps to reproduce:
1. Open the attached DOCX in Word - the footer is empty
2. Open the attached DOCX in LO - the footer is not empty
3. In LO - save as new DOCX
4. Open new DOCX in Word - the footer is not empty

Current behavior:
When opening DOCX in LO - footer is not empty
When saving as new DOCX and opening it in Word - footer is not empty

Expected behavior:
Footer should be empty like in Word (it is probably hidden in Word)

Operating System: Windows 8
Version: 4.0.2.2 release
Comment 1 Jorendc 2013-05-06 19:00:17 UTC
What version of Microsoft Office do you use? I can reproduce the behavior with your attached document, but I can't creating a test document from scratch (using Word 2010).

You can reproduce this from scratch, or only with this document?
Tested using Linux Mint 14 x64 with LibreOffice 4.0.3.3.

Kind regards,
Joren
Comment 2 Adam CloudOn 2013-05-07 13:10:40 UTC
I am not creating it from scratch.
It is a document I received via email, and I minimized it to bare bones so I could just show the bug.
As far as  I know - it was produced with Word 2010.
I have Word 2013 and the behavior is the same.
Comment 3 Adam CloudOn 2013-06-11 14:31:45 UTC
Created attachment 80699 [details]
DOCX containing blank odd footer and non-blank even footer - marked as 'show only odd footers'

I've added a minimal DOCX that shows what happens.
This bug relates to the fact that if a DOCX is marked as 'Show only ODD footer' (meaning that the 'Different Odd & Even Pages' is NOT checked - then LO will append the ODD and EVEN footers together and show them.

This means that in the attached file - there is a blank ODD footer and a non-blank EVEN footer - LO will append both footers and show them as a single footer on all the pages (the non-blank footer). Word shows nothing in the footer, because it shows only the ODD footer (which is blank).
Comment 4 Adam CloudOn 2013-06-11 14:33:28 UTC
Created attachment 80700 [details]
DOCX containing non-blank odd footer and non-blank even footer - marked as 'show only odd footers'

I've added another minimal DOCX that shows what happens.
This bug relates to the fact that if a DOCX is marked as 'Show only ODD footer' (meaning that the 'Different Odd & Even Pages' is NOT checked - then LO will append the ODD and EVEN footers together and show them.

This means that in the attached file - there is a non-blank ODD footer and a non-blank EVEN footer - LO will append both footers and show them as a single footer on all the pages (merged together). Word shows only the ODD footer.
Comment 5 Commit Notification 2013-06-19 12:36:40 UTC
Adam Co committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=782adba4d436c65cdf85d48f28486321873b15ed

fdo#64238: fix for missing footer bug



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.