fdo#64238: fix for missing footer bug

Change-Id: I328547c41bfc1a23f7e6233db57fbfa415e22cb3